--- a/cafe/templates/manager/menu.html
+++ b/cafe/templates/manager/menu.html
@@ -1,4 +1,4 @@
-{% extends 'admin/index.html' %}
+{% extends 'manager/index.html' %}
 
 {% block content %}
 
@@ -41,23 +41,24 @@
                         </tr>
                         <tr>
                             <td><label for="">Price</label></td>
-                            <td><input type="number" name="price" id="" class="form-control"></td>
+                            <td><input type="number" value="0" name="price" id="" class="form-control"></td>
                         </tr>
                         <tr>
                             <td><label for="">S-Price</label></td>
-                            <td> <input type="number" name="s-price" id="" class="form-control"></td>
+                            <td> <input type="number" value="0" name="s-price" id="" class="form-control"></td>
                         </tr>
                         <tr>
                             <td><label for="">M-Price</label></td>
-                            <td> <input type="number" name="m-price" id="" class="form-control"></td>
+                            <td> <input type="number" value="0" name="m-price" id="" class="form-control"></td>
                         </tr>
                         <tr>
                             <td><label for="">L-Price</label></td>
-                            <td> <input type="number" name="l-price" id="" class="form-control"></td>
+                            <td> <input type="number" value="0" name="l-price" id="" class="form-control"></td>
                         </tr>
                         <tr>
                             <td><label for="">Picture</label></td>
                             <td> <input type="file" accept='image/' name="picture" id="" class="form-control"></td>
+
                         </tr>
                         <tr>
                             <td colspan="2" spellcheck="false" class="">
@@ -77,7 +78,6 @@
 
     </script>
 </nav>
-
 
 <table class="table table-bordered table-hover">
     <thead class=" bg-dark text-white">
@@ -135,8 +135,6 @@
                                         data-bs-dismiss="modal">Cancel</button>
                                     <button type="submit" class="btn btn-danger">Confirm</button>
                                 </form>
-
-
                             </div>
                         </div>
                     </div>
@@ -150,32 +148,62 @@
                     data-bs-target="#edit-{{items.id}}">
                     Edit
                 </button>
-
                 <!-- Modal Body -->
                 <!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
                 <div class="modal fade" id="edit-{{items.id}}" tabindex="-1" data-bs-backdrop="static"
                     data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
+                    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="modalTitleId">Modal title</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
+                                <strong>Edit {{items.menu}}</strong>
                             </div>
                             <div class="modal-body">
-                                Body
+
+                                <form action="{% url 'edit' %}" method="post" enctype="multipart/form-data"
+                                    class="form-group edit d-flex flex-column p-3">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="id" value="{{items.id}}">
+                                    <input type="text" name="menu" value="{{items.menu}}" id=""
+                                        class="form-control my-1">
+                                    <select name="cat" id="" class="form-control text-capitalize my-1">
+                                        <option value="uncategory">Uncategory</option>
+                                        {% for cat in category %}
+                                        <option value="{{cat.category}}" class="text-capitalize">{{cat.category}}
+                                        </option>
+                                        {% endfor %}
+                                    </select>
+                                    <input type="number" name="price" id="" value="{{items.price}}"
+                                        class="form-control my-1">
+                                    <input type="number" name="s-price" id="" value="{{items.s_price}}"
+                                        class="form-control my-1">
+                                    <input type="number" name="m-price" id="" value="{{items.m_price}}"
+                                        class="form-control my-1">
+                                    <input type="number" name="l-price" id="" value="{{items.l_price}}"
+                                        class="form-control my-1">
+                                    <textarea name="" id="desc" cols="30" rows="3" class="form-control my-1"></textarea>
+                                    <a href="/media/{{items.picture}}" class="nav-link"
+                                        target="blank">{{items.picture}}</a>
+                                    <input class="form-control my-1" type="file" accept="image/" name="new-picture"
+                                        id="">
+                                    <hr>
+                                    <div class="w-100 d-flex flex-row justify-content-end">
+                                        <button type="reset" data-bs-dismiss="modal" class="btn btn-danger mx-1">
+                                            cancel
+                                        </button>
+                                        <button type="submit" class="btn btn-primary">
+                                            Edit
+                                        </button>
+
+                                    </div>
+                                </form>
                             </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save</button>
-                            </div>
+
                         </div>
                     </div>
                 </div>
                 <!-- Optional: Place to the bottom of scripts -->
                 <script>
                     const edit = new bootstrap.Modal(document.getElementById('edit-{{items.id}}'), options)
-
                 </script>
             </td>
         </tr>
