--- a/cafe/templates/cafe/index.html
+++ b/cafe/templates/cafe/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAFE</title>
+    <title>{{user}}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
@@ -29,7 +29,7 @@
     </style>
 </head>
 
-<body class="bg-white vh-100 border">
+<body class="bg-white h-100 border">
     <header class="w-100 border-bottom bg-white">
         <nav class="w-100 d-flex align-items-center row-cols-3 border-bottom">
             <div class="d-flex justify-content-start px-5 align-items-center">
@@ -43,7 +43,9 @@
                 <label class="d-none d-sm-block" for="basket">basket</label>
             </div>
             <div class="box">
-                <strong class=" display-4">Cafe</strong>
+                <a href="{% url 'home' %}" class="nav-link">
+                    <strong class=" display-3 fw-bold">Cafe</strong>
+                </a>
             </div>
             <div class="d-flex justify-content-end px-5 align-items-center">
                 <label for="search" class="d-none d-md-block">search</label>
@@ -55,16 +57,18 @@
                             d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z" />
                     </svg>
                 </button>
-                <div class="modal fade" id="search-modal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false"
-                    role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
-                    
+                <div class="modal fade" id="search-modal" tabindex="-1" data-bs-backdrop="static"
+                    data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+
                     <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm" role="document">
                         <div class="modal-content bg-transparent border-0 ">
-                            
+
                             <div class="modal-body">
-                                <form action="" method="get" class="d-flex flex-row align-items-center bg-white p-1 rounded-2">
-                                    
-                                    <input type="search" name="" id="" class="form-control" placeholder="search...">
+                                <form action="{% url 'search' %}" method="get"
+                                    class="d-flex flex-row align-items-center bg-white p-1 rounded-2">
+
+                                    <input type="search" name="search" id="" class="form-control"
+                                        placeholder="search...">
                                     <button type="submit" class="icon btn btn-white">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             fill="currentColor" class="bi bi-search-heart" viewBox="0 0 16 16">
@@ -75,7 +79,7 @@
                                         </svg>
                                     </button>
                                     <button type="button" style="scale: 0.5;" class=" btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
+                                        aria-label="Close"></button>
                                 </form>
                             </div>
                         </div>
