--- a/cafe/templates/cafe/home.html
+++ b/cafe/templates/cafe/home.html
@@ -52,6 +52,7 @@
 
         text-transform: capitalize;
     }
+
 </style>
 
 {% for category, menus in menu.items %}
@@ -64,7 +65,9 @@
             <img src="media/{{items.picture}}" alt="" class="card-img-top">
             <div class="p-3 d-flex flex-column card-body">
                 <span class="d-flex flex-row justify-content-between align-items-baseline">
-                    <strong class=" card-title">{{items.menu}}</strong>
+                    <a href="/detail/?id={{items.id}}" class="nav-link">
+                        <strong class=" card-title">{{items.menu.capitalize}}</strong>
+                    </a>
 
                 </span>
                 <span class="justify-content-between d-flex card-text">
@@ -79,10 +82,5 @@
     </div>
 </div>
 {% endfor %}
-
-
-
-
-
 
 {% endblock %}
