--- a/cafe/templates/index.html
+++ b/cafe/templates/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+{% load static %}
 <html lang="en">
 
 <head>
@@ -6,6 +6,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="{% static 'assets/js/index.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -43,14 +45,12 @@
         .search-bar {
             width: 100%;
             border: none;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+            border-bottom: 2px solid rgba(0, 0, 0, 0.5);
         }
 
         .search-bar:active,
         .search-bar:focus {
             outline: none;
-
-
 
         }
     </style>
@@ -77,10 +77,12 @@
             <div class="collapse navbar-collapse col-8 justify-content-between align-items-end" tabindex="5"
                 id="collapseMenu">
                 <div
-                    class="menu col-12 col-md-5 d-flex flex-row align-items-center justify-content-evenly justify-content-md-between">
+                    class="menu col-12 col-md-5 d-flex flex-row align-items-center justify-content-around justify-content-md-between">
                     <a href="" class="nav-link fw-semibold">Home</a>
                     <a href="" class="nav-link fw-semibold">About</a>
                     <a href="" class="nav-link fw-semibold">Contact</a>
+                    <a href="{% url 'login' %}" class="nav-link fw-semibold">Login</a>
+
                 </div>
                 <form action="" method="get" class="d-flex flex-row align-items-center col-12 col-md-5 px-5">
                     <input type="search" name="" id="" class="search-bar" placeholder="search">
@@ -98,43 +100,22 @@
             </div>
         </nav>
     </header>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    {% block content %}
+    
+    
+    {% endblock content %}
+    
     
 
-    <script>
-        window.addEventListener("scroll", (event) => {
-            let scroll = this.scrollY;
-
-            let x = scrollMaxValue()
-            let y = scroll;
-            let p = (y / x) * 100
-            console.log(`Scroll ${p}%`)
-
-            
-
-
-
-        });
-        const scrollMaxValue = () => {
-            const body = document.body;
-            const html = document.documentElement;
-
-            const documentHeight = Math.max(
-                body.scrollHeight,
-                body.offsetHeight,
-                html.clientHeight,
-                html.scrollHeight,
-                html.offsetHeight
-            );
-
-            const windowHeight = window.innerHeight;
-
-            return documentHeight - windowHeight;
-        };
 
 
 
 
-    </script>
+
+
 
 
 
