--- a/cafe/static/assets/css/login.css
+++ b/cafe/static/assets/css/login.css
@@ -28,7 +28,12 @@ form {
 
 }
 
-form>img {
+.go-home {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.go-home>img {
     width: 175px;
     height: 175px;
     margin-left: auto;
