--- a/cafe/templates/index.html
+++ b/cafe/templates/index.html
@@ -19,108 +19,171 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
         </script>
-    <style>
-        .wave {
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            z-index: -2;
 
-        }
-
-        header {
-
-            z-index: 5;
-        }
-
-        .collapse {
-            z-index: 10;
-            background: none;
-        }
-
-        .modal-content {
-            z-index: inherit;
-        }
-
-        .search-bar {
-            width: 100%;
-            border: none;
-            border-bottom: 2px solid rgba(0, 0, 0, 0.5);
-        }
-
-        .search-bar:active,
-        .search-bar:focus {
-            outline: none;
-
-        }
-    </style>
 </head>
 
-<body class="bg-white">
-    <header class="w-100 sticky-top bg-white">
-        <nav
-            class="navbar navbar-nav navbar-expand-sm navbar-white d-flex flex-row align-content-center justify-content-between px-2 container">
-            <div class="navbar-brand col-4">
-                <a href="{% url 'home' %}" class="nav-link">
-                    <strong class="display-5 text-black fw-semibold">CAFE</strong>
-                </a>
-            </div>
-            <button class="navbar-toggler d-md-none fw-bold" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapseMenu" aria-controls="collapseMenu" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
-                    class="bi bi-arrows-collapse" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                        d="M1 8a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13A.5.5 0 0 1 1 8Zm7-8a.5.5 0 0 1 .5.5v3.793l1.146-1.147a.5.5 0 0 1 .708.708l-2 2a.5.5 0 0 1-.708 0l-2-2a.5.5 0 1 1 .708-.708L7.5 4.293V.5A.5.5 0 0 1 8 0Zm-.5 11.707-1.146 1.147a.5.5 0 0 1-.708-.708l2-2a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1-.708.708L8.5 11.707V15.5a.5.5 0 0 1-1 0v-3.793Z" />
-                </svg>
-            </button>
-            <div class="collapse navbar-collapse col-8 justify-content-between align-items-end" tabindex="5"
-                id="collapseMenu">
-                <div
-                    class="menu col-12 col-md-5 d-flex flex-row align-items-center justify-content-around justify-content-md-between">
-                    <a href="" class="nav-link fw-semibold">Home</a>
-                    <a href="" class="nav-link fw-semibold">About</a>
-                    <a href="" class="nav-link fw-semibold">Contact</a>
-                    <a href="{% url 'login' %}" class="nav-link fw-semibold">Login</a>
-
-                </div>
-                <form action="" method="get" class="d-flex flex-row align-items-center col-12 col-md-5 px-5">
-                    <input type="search" name="" id="" class="search-bar" placeholder="search">
-                    <button type="submit" class="btn btn-white">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
-                            class="bi bi-search-heart" viewBox="0 0 16 16">
-                            <path style="color: red;"
-                                d="M6.5 4.482c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z" />
+<body class="bg-light container" id="app">
+    <header class="">
+        <nav class="  d-flex flex-row justify-content-between align-items-center">
+            <!-- profile -->
+            <div class="profile d-flex flex-row">
+                <img :src="[[ profileImg ]]" alt="" class="profileImg rounded-circle img-fluid">
+                <div class="profileInfo mx-3 d-flex flex-column">
+                    <b>[[ username ]]</b>
+                    <span class="my-2 d-flex flex-row align-items-baseline">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-geo-alt" viewBox="0 0 16 16">
                             <path
-                                d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z" />
+                                d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
+                            <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                         </svg>
-                    </button>
-                </form>
-
+                        <p class="mx-2 fw-semibold text-black-50">[[ address ]]</p>
+                    </span>
+                </div>
             </div>
+            <!-- end profile -->
+            <!-- Notification -->
+            <a class="notification nav-link" href="{% url 'login' %}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                    class="bi bi-app-indicator" viewBox="0 0 16 16">
+                    <path
+                        d="M5.5 2A3.5 3.5 0 0 0 2 5.5v5A3.5 3.5 0 0 0 5.5 14h5a3.5 3.5 0 0 0 3.5-3.5V8a.5.5 0 0 1 1 0v2.5a4.5 4.5 0 0 1-4.5 4.5h-5A4.5 4.5 0 0 1 1 10.5v-5A4.5 4.5 0 0 1 5.5 1H8a.5.5 0 0 1 0 1H5.5z" />
+                    <path style="color: pink;" d="M16 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                </svg>
+            </a>
         </nav>
     </header>
+    <!-- end header -->
+    <!-- Text block -->
+    <div class="text mt-5 p-2 d-flex flex-row">
+        <h2 class="h fw-bold">What would you like <br>to </h2>
+    </div>
+    <!-- end block -->
+    <!-- search form -->
+    <form action="" method="get" class="d-flex flex-row p-2 w-100 justify-content-between my-2 my-md-4 ">
+        <div class="searchBox">
+            <div class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                    class="bi bi-search-heart" viewBox="0 0 16 16">
+                    <path style="color: pink;"
+                        d="M6.5 4.482c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z" />
+                    <path
+                        d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z" />
+                </svg>
+            </div>
+            <input type="search" id="search" placeholder="search menu" class="mx-1">
+        </div>
+        <button id="filter" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-funnel"
+                viewBox="0 0 16 16">
+                <path
+                    d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2h-11z" />
+            </svg>
+        </button>
+    </form>
+    <!-- end search form -->
+    <!-- category -->
+    
+    <section id="category"  class="my-3 my-md-4 p-2 justify-content-md-center">
+        <a  class=" d-inline-block nav-link" id="cats-item">
+            <div class="cats">
+                <img src="{% static 'assets/img/categoryIcon/coffee (1).png' %}" alt="" srcset="" class="cats-img">
+                <b class="cats-text">Hot Coffee</b>
+            </div>
+        </a>
+        <a  class=" d-inline-block nav-link" id="cats-item">
+            <div class="cats">
+                <img src="{% static 'assets/img/categoryIcon/iced-coffee.png' %}" alt="" srcset="" class="cats-img">
+                <b class="cats-text">Ice Coffee</b>
+            </div>
+        </a>
+        <a  class=" d-inline-block nav-link" id="cats-item">
+            <div class="cats">
+                <img src="{% static 'assets/img/categoryIcon/coffee-cup.png' %}" alt="" srcset="" class="cats-img">
+                <b class="cats-text">Coffee Cup</b>
+            </div>
+        </a>
+        <a  class=" d-inline-block nav-link" id="cats-item" href="">
+            <div class="cats">
+                <img src="{% static 'assets/img/categoryIcon/latte.png' %}" alt="" srcset="" class="cats-img">
+                <b class="cats-text">Latte</b>
+            </div>
+        </a>
+        <a  class=" d-inline-block nav-link" id="cats-item">
+            <div class="cats">
+                <img src="{% static 'assets/img/categoryIcon/bubbleTea.png' %}" alt="" srcset="" class="cats-img">
+                <b class="cats-text">Bubble Tea</b>
+            </div>
+        </a>
+        <a  class=" d-inline-block nav-link" id="cats-item">
+            <div class="cats">
+                <img src="{% static 'assets/img/categoryIcon/green-tea.png' %}" alt="" srcset="" class="cats-img">
+                <b class="cats-text">Green Tea</b>
+            </div>
+        </a>
+        <a  class=" d-inline-block nav-link" id="cats-item">
+            <div class="cats">
+                <img src="{% static 'assets/img/categoryIcon/tea-cup.png' %}" alt="" srcset="" class="cats-img">
+                <b class="cats-text">Tea</b>
+            </div>
+        </a>
+        <a  class=" d-inline-block nav-link" id="cats-item">
+            <div class="cats">
+                <img src="{% static 'assets/img/categoryIcon/donut.png' %}" alt="" srcset="" class="cats-img">
+                <b class="cats-text">Donut</b>
+            </div>
+        </a>
+        <a  class=" d-inline-block nav-link" id="cats-item">
+            <div class="cats">
+                <img src="{% static 'assets/img/categoryIcon/cake (2).png' %}" alt="" srcset="" class="cats-img">
+                <b class="cats-text">Cake</b>
+            </div>
+        </a>
+    </section>
+    <!-- end category -->
+
+    <!-- script -->
+    <footer>
+
+    </footer>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script >
+        const { createApp } = Vue
 
-    {% block content %}
-    
-    
-    {% endblock content %}
-    
-    
+        createApp({
+            delimiters: ["[[", "]]"],
+            data() {
+                return {
+                    username: 'Apisit Saithong',
+                    address: 'Sisaket',
+                    profileImg: 'https://scontent.fnak4-2.fna.fbcdn.net/v/t1.6435-9/161610854_930459957780431_1053975476520696176_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeHjMhoWRANfAm9ag4r0OPUDF9DHUda85WYX0MdR1rzlZvv-AcqIzDvdGDzacRExz2thWC_ded4CHCl88KaEL550&_nc_ohc=U691kd68CS8AX9ooP1O&_nc_ht=scontent.fnak4-2.fna&oh=00_AfA9nre5Jbxqg2dTEhtl1aepKdbvchPp0iGhYdmZgeM31Q&oe=6441E193',
+                    menu: [
+                        {
+                            id: 1,
+                            menu: 'latte',
+                            img: 'latte.png'
+                        },
+                        {
+                            id:2,
+                            menu:'bubble tea',
+                            img:'bubble-tea.png'
 
+                        }
+                    ]
 
+                }
+            },
+            mounted() {
 
+            },
+            methods: {
 
+            }
+        }).mount('#app')
 
-
-
-
-
-
-
-
+    </script>
+    <!-- end script -->
 </body>
 
 </html>
