--- a/cafe/templates/gate/login.html
+++ b/cafe/templates/gate/login.html
@@ -107,26 +107,35 @@
         </div>
         <span class="mt-1 mt-md-3 d-flex flex-row justify-content-center">
             <b>Don't have an account ?</b>
-            <a href="" class="nav-link mx-2">
+            <a href="{% url 'register' %}" class="nav-link mx-2">
                 <b style="color:#381f18;">Sign Up</b>
             </a>
         </span>
+       
     </form>
+
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="module">
         const { createApp } = Vue
+
+        
 
         createApp({
             delimiters: ["[[", "]]"],
             data() {
                 return {
                     name: 'Apisit',
-                    warningPwd : null
+                    warningPwd : null,
+                    data:null,
+                    
+                    
 
                 }
             },
             mounted() {
+                
 
             },
             methods: {
@@ -139,6 +148,7 @@
                         this.$refs['passwordIn'].type = 'password'
                         this.warningPwd = null
                     }
+                    console.log(this.prov)
 
                 },
             }
