--- a/cafe/templates/gate/register.html
+++ b/cafe/templates/gate/register.html
@@ -1,114 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- Bootstrap CSS v5.2.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-        </script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-        </script>
-</head>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+  </head>
 
-<body>
+  <body>
     <form action="" method="get" class="form-group container" id="register">
-        [[ provinceSelected ]]
-        <table class="table">
-            <tr>
-                <td>จังหวัด</td>
-                <td>
-                    <select name="" id="" class="form-control" v-model="provinceSelected"
-                        @change="ProvinceOnSelected">
-                        <option v-for='prov in provinces' :value="prov">[[ prov ]]</option>
-                    </select>
-                </td>
-            </tr>
-            <tr v-show="districts != null">
-                <td >อำเภอ</td>
-                <td>
-                    <select name="" id="" class="form-control" v-model="districtSelected"
-                        @change="DistrictOnSelected">
-                        <option v-for='dist in districts' :value="dist">[[ dist ]]</option>
-                    </select>
-                </td>
-            </tr>
-            <tr v-show="tambons != null">
-                <td >ตำบล</td>
-                <td>
-                    <select name="" id="" class="form-control" v-model="tambonSelected"
-                        @change="">
-                        <option v-for='tamb in tambons' :value="tamb">[[ tamb ]]</option>
-                    </select>
-                </td>
-            </tr>
-        </table>
-
+      <table class="table">
+        <tr>
+          <td>จังหวัด</td>
+          <td>
+            <select name="" id="" class="form-control" v-model="provinceSelected" @change="ProvinceOnSelected">
+              <option v-for="prov in provinces" :value="prov">[[ prov ]]</option>
+            </select>
+          </td>
+        </tr>
+        <tr v-show="districts != null">
+          <td>อำเภอ</td>
+          <td>
+            <select name="" id="" class="form-control" v-model="districtSelected" @change="DistrictOnSelected">
+              <option v-for="dist in districts" :value="dist">[[ dist ]]</option>
+            </select>
+          </td>
+        </tr>
+        <tr v-show="tambons != null">
+          <td>ตำบล</td>
+          <td>
+            <select name="" id="" class="form-control" v-model="tambonSelected" @change="">
+              <option v-for="tamb in tambons" :value="tamb">[[ tamb ]]</option>
+            </select>
+          </td>
+        </tr>
+      </table>
     </form>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
     <script type="module">
-        const { createApp } = Vue
+      const { createApp } = Vue;
 
-        createApp({
-            delimiters: ["[[", "]]"],
-            data() {
-                return {
-                    provinces: null,
-                    districts: null,
-                    tambons: null,
+      createApp({
+        delimiters: ["[[", "]]"],
+        data() {
+          return {
+            provinces: null,
+            districts: null,
+            tambons: null,
 
-                    provinceSelected: '',
-                    districtSelected: '',
-                    tambonSelected: '',
-                }
-            },
-            mounted() {
-                axios
-                    .get("{% url 'prov' %}")
-                    .then(response => (this.provinces = response.data))
+            provinceSelected: "",
+            districtSelected: "",
+            tambonSelected: "",
+          };
+        },
+        mounted() {
+          axios.get("{% url 'prov' %}").then((response) => (this.provinces = response.data));
+        },
+        methods: {
+          ProvinceOnSelected() {
+            const form_data = new FormData();
+            form_data.append("province", this.provinceSelected);
+            form_data.append("csrfmiddlewaretoken", "{{csrf_token}}");
 
-            },
-            methods: {
-                ProvinceOnSelected() {
-                    const form_data = new FormData();
-                    form_data.append("province", this.provinceSelected);
-                    form_data.append("csrfmiddlewaretoken", "{{csrf_token}}");
+            axios.post("{% url 'dist' %}", form_data).then((response) => {
+              this.districts = response.data["data"];
+              this.tambons = null;
+              console.log(response.data["data"]);
+            });
+            console.log("selected", this.provinceSelected);
+          },
+          DistrictOnSelected() {
+            const form_data = new FormData();
+            form_data.append("district", this.districtSelected);
+            form_data.append("province", this.provinceSelected);
+            form_data.append("csrfmiddlewaretoken", "{{csrf_token}}");
 
-                    axios.post("{% url 'dist' %}", form_data).then((response) => {
-                        this.districts = response.data['data'];
-                        console.log(response.data['data'])
-                    });
-                    console.log('selected', this.provinceSelected)
-                    
-
-                },
-                DistrictOnSelected(){
-                    const form_data = new FormData();
-                    form_data.append("district", this.districtSelected);
-                    form_data.append("province", this.provinceSelected);
-                    form_data.append("csrfmiddlewaretoken", "{{csrf_token}}");
-
-                    axios.post("{% url 'tamb' %}", form_data).then((response) => {
-                        this.tambons = response.data['data'];
-                        console.log(response.data['data'])
-                    });
-                    console.log('selected', this.districtSelected)
-
-                }
-            }
-        }).mount('#register')
-
+            axios.post("{% url 'tamb' %}", form_data).then((response) => {
+              this.tambons = response.data["data"];
+              console.log(response.data["data"]);
+            });
+            console.log("selected", this.districtSelected);
+          },
+        },
+      }).mount("#register");
     </script>
-
-</body>
-
+  </body>
 </html>
